--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -23,6 +23,9 @@
 		"terminal.integrated.shell.linux": "/bin/bash",
 		"python.linting.flake8Enabled": true,
 		"editor.formatOnSave": true,
+		"[json]": {
+			"editor.formatOnSave": false
+		},
 		"python.formatting.provider": "black",
 		"python.defaultInterpreterPath": "/opt/conda/bin/python",
 		"python.languageServer": "Jedi",
